# newsletter

./: Cargo.toml  configuration.yaml
.cargo/: config.toml
migrations/: 20260110174927_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
