[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
config = "0.15.19"
reqwest = { version = "0.13.1", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros"] }
urlencoding = "2.1.3"

# [dependencies]
# [...]
# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
	"runtime-actix-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
